# shadow-oracle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: error.rs  lib.rs  price.rs
src/providers/: chainlink.rs  mod.rs  pyth.rs  switchboard.rs
